Mis en place de FCM (manifest et service worker)

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Hammer JS for Angular MAterial-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
-
-
+    <!-- Manifest -->
+    <link rel="manifest" href="/manifest.json">
     <!-- add to homescreen for ios -->
-    <meta content="yes" name="apple-mobile-web-app- capable"/>
+    <meta content="no" name="apple-mobile-web-app- capable"/>
     <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
 </head>
 
