--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <meta content="no" name="msapplication-tap-highlight"/>
 
     <link href="assets/icons/favicon.ico" rel="icon" type="image/png"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <!--Hammer JS for Angular MAterial-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.js"></script>
 
